<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/sub20p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sub15p"
        android:layout_alignBottom="@+id/sub15p"
        android:layout_toRightOf="@+id/sub15p"
        android:onClick="onSub20p"
        android:text="@string/sub20p" />

    <Button
        android:id="@+id/sub10p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="37dp"
        android:onClick="onSub10p"
        android:text="@string/sub10p" />

    <Button
        android:id="@+id/sub15p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/sub10p"
        android:onClick="onSub15p"
        android:text="@string/sub15p" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sub10p"
        android:layout_alignParentTop="true"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:text="@string/etAmount" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sub10p"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout_marginLeft="26dp"
        android:text="Tip Amount" />

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/sub20p"
        android:layout_marginLeft="17dp"
        android:text="@string/tvTips"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
